<resources>
    <string name="app_name">Kablys</string>
    <string name="username">Slapyvarsdis</string>
    <string name="password">Slaptažodis</string>
    <string name="login">Prisijungti</string>
    <string name="unregistered">Neprisiregistraves?</string>
    <string name="register">Prisiregistruoti</string>
    <string name="comf_passwd">Patvirtinti</string>
    <string name="btn_register">Prisiregistruoti</string>
    <string name="btn_login">Prisijungti</string>
    <string name="text_not_registred">Neužsiregistravęs?</string>
    <string name="text_register">Užsiregistruoti</string>
    <string name="text_login">Prisijungti</string>
    <string name="not_registred">Neužsiregistravęs?</string>
    <string name="btn_text_register">Užseregistruoti</string>
    <string name="already_registered">Užsiregistravęs?</string>
    <string name="menu_weather">Orai</string>
    <string name="menu_account">Paskyra</string>
    <string name="menu_logout">Atsijungti</string>
    <string name="menu_share">Pasidalinti</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_communication">Komunikacija</string>
    <string name="open_navigation">Atidaryti Meniu</string>
    <string name="close_navigation">Uždaryti Meniu</string>
    <string name="toolbar_text">Orai</string>
    <string name="email">Emailas</string>
    <string name="google_map_api_key">AIzaSyDsqC4xKryVdY54iausGO21XUY-IZmS6Wk</string>
    <string name="map_fish">Žuvis</string>
    <string name="map_weight">Svoris</string>
    <string name="map_description">Aprašymas</string>
    <string name="text_cought_fish">Pažymėkite pagautą žuvį žemėlapyje</string>
    <string name="maps_btn_ok">OK</string>
    <string name="maps_cancel">Atšaukti</string>
    <string name="upload_pic">Įkelti nuotrauka</string>
    <string name="nav_maps">Žemėlapis</string>
    <string name="share_catch">Pasidalinti pagavimu</string>
    <string name="nav_account">Paskyra</string>
    <string name="nav_permit">Leidimas</string>
    <string name="permit_notes">Pastabos</string>
    <string name="exipre_date">Galiojimo pabaiga</string>
    <string name="btn_permit">Gerai</string>
    <string name="permit_start_date">Galiojimo pradžia</string>
    <string name="permit_spinner_dur">Trukmė:</string>
    <string name="nav_fishes">Žuvys</string>
    <string name="fishes_pond">Žuvys</string>
    <string name="mark_fishes_in_pond">Pažymėkite žuvis kurios čia veisiasi</string>
    <string name="fishes_in_this_pond">Žuvys šiame tvenkinyje</string>
    <string name="nav_calendar">Kalendorius</string>
    <string name="fish_lenght">Ilgis</string>
    <string name="check_limits">Tikrinti</string>
    <string name="limits_grant">Leidimas</string>
    <string-array name="time_array">
        <item>"Pasirinkite laiką"</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="duration_array">
        <item>"Pasirinkite trukmę"</item>
        <item>"Dvi dienos"</item>
        <item>"Mėnuo"</item>
        <item>"Metai"</item>

    </string-array>
    <string-array name="cought_amount">
        <item>"Pasirinkite kiekį"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"1kg"</item>
        <item>"2kg"</item>
        <item>"3kg"</item>
        <item>"4kg"</item>
        <item>"5kg"</item>
        <item>"6kg"</item>
        <item>"7kg"</item>
        <item>"8kg"</item>

    </string-array>
    <string-array name="cought_fish">
        <item>"Pasirinkite žuvį"</item>
        <item>"šamas"</item>
        <item>"ūsorius"</item>
        <item>"lydeka"</item>
        <item>"sterkas"</item>
        <item>"ungurys"</item>
        <item>"vėgėlė"</item>
        <item>"šapalas"</item>
        <item>"skersnukius"</item>
        <item>"vijūnas"</item>
        <item>"jūrinė nėgė"</item>
        <item>"nėgių vingilius"</item>
        <item>"šlakius"</item>
        <item>"sykas"</item>
        <item>"salačius"</item>
        <item>"vijūnas"</item>
        <item>"jūrinė nėgė"</item>
        <item>"lynas"</item>

    </string-array>
    <string-array name="cought_lenght">
        <item>"Pasirinkite ilgį"</item>
        <item>"10cm"</item>
        <item>"20cm"</item>
        <item>"30cm"</item>
        <item>"40cm"</item>
        <item>"50cm"</item>
        <item>"60cm"</item>
        <item>"70cm"</item>
        <item>"80cm"</item>
        <item>"90cm"</item>
        <item>"100cm"</item>
    </string-array>
    <string-array name="cought_card">
        <item>"Žvejo mėgėjo kortelė?"</item>
        <item>"Taip"</item>
        <item>"Ne"</item>

    </string-array>
    <string-array name="calendar_fishes">
        <item>"Pasirinkite žuvį"</item>
        <item>"Aukšlė"</item>
        <item>"Ešerys"</item>
        <item>"Gružlys"</item>
        <item>"Karpis"</item>
        <item>"Karosas"</item>
        <item>"Karšis"</item>
        <item>"Kiršlys"</item>
        <item>"Kuoja"</item>
        <item>"Lydeka"</item>
        <item>"Lynas"</item>
        <item>"Meknė"</item>
        <item>"Plakis"</item>

    </string-array>
    <string-array name="calendar_month">
        <item>"Pasirinkite mėnesį"</item>
        <item>"rugsėjis"</item>
        <item>"gruodis"</item>
        <item>"lapkritis"</item>
        <item>"spalis"</item>
        <item>"rugpjūtis"</item>
        <item>"liepa"</item>
        <item>"birželis"</item>
        <item>"gegužė"</item>
        <item>"balandis"</item>
        <item>"kovas"</item>
        <item>"vasaris"</item>
        <item>"sausis"</item>
    </string-array>
</resources>