<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

   <group android:checkableBehavior="single">
       <item android:id="@+id/nav_weather"
           android:icon="@drawable/ic_sun"
           android:title="@string/menu_weather"/>

       <item android:id="@+id/nav_account"
           android:icon="@drawable/ic_account"
           android:title="@string/menu_account"/>

       <item android:title="@string/menu_logout"
             android:id="@+id/nav_logout"/>
   </group>

    <item android:title="@string/menu_communication">
        <menu>
            <item android:id="@+id/menu_fb"
                android:icon="@drawable/ic_face"
                android:title="@string/menu_facebook"/>
        </menu>
    </item>

</menu>