<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="5dp"
        android:singleLine="true"
        android:nextFocusForward="@+id/edit_passwd"
        android:hint="@string/username"/>


    <EditText
        android:id="@+id/edit_passwd"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/passwd"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:nextFocusForward="@+id/btn_login"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_not_registred"/>
        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_register"/>

    </LinearLayout>

</LinearLayout>