<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/permit_text"
        android:text="Aprašykite leidimą"
        android:textSize="18sp"
        android:textColor="#000"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/permit_text"
        android:id="@+id/linear"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="Neturi leidimo?"/>
        <TextView
            android:id="@+id/text_permit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="Nusipirkti ledimą"/>

    </LinearLayout>

    <EditText
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_date"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:layout_below="@+id/linear"
        android:nextFocusForward="@+id/map_weight"
        android:hint="@string/permit_start_date"/>


    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/start_date"
        android:id="@+id/time_spinner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/permit_time"

            android:textSize="18sp"
            android:text="Laikas:"/>

        <Spinner
            android:id="@+id/spinner_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:verticalScrollbarPosition="left"
            android:entries="@array/time_array"/>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/time_spinner"
        android:id="@+id/end_spinner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/permit_duration"

            android:textSize="18sp"
            android:text="@string/permit_spinner_dur"/>

        <Spinner
            android:id="@+id/spinner_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:verticalScrollbarPosition="left"
            android:entries="@array/duration_array"/>

    </LinearLayout>


    <EditText
        android:id="@+id/permit_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_spinner"
        android:hint="@string/permit_notes"
        android:paddingTop="14dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/upload_permit"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_permit"
        android:layout_below="@+id/permit_notes"/>


</RelativeLayout>